# computer_store_data_base_app_flet

./: README.md  todo.md
.github/workflows/: build_all.yml
src/: main.py  pyproject.toml
src/backend/: api.py
src/views/: __init__.py  about_view.py  reports_view.py  table_view.py
